prod_snapshot_2015-09-24_1030/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Product__c</fullName>
        <formula>IF(CONTAINS( &quot;Live:Fulfilled-Complete:Fulfilled Renewed&quot;,Project_Status__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_Email__c</fullName>
        <formula>Affl_Sales_Rep__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_First__c</fullName>
        <formula>IF(NOT(Opportunity__r.Sales_Rep__r.FirstName=Null),Opportunity__r.Sales_Rep__r.FirstName, Opportunity__r.Sales_Rep_II__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Sales Rep First</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_Full__c</fullName>
        <formula>Affl_Sales_Rep__r.FirstName &amp; &quot; &quot; &amp;  Affl_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Sales Rep Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep_OnOppId__c</fullName>
        <formula>Opportunity__r.Sales_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affl Sales Rep OnOppId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Affl Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awaiting_OnBoard_Stamp__c</fullName>
        <label>Awaiting OnBoard Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CanCreateILI__c</fullName>
        <formula>Project_Status__c== Related_Product__r.Invoice_StatusToCreateILI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Create ILI&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Category__c</fullName>
        <label>Cancellation Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled Before Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled After Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non-Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Detail__c</fullName>
        <label>Cancellation Detail</label>
        <picklist>
            <controllingField>Cancellation_Reason__c</controllingField>
            <picklistValues>
                <fullName>Sold outside of deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set unrealistic or no performance expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client not fully explained OB process, frustrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undersold vs recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong product for the client’s goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales communicated ‘opt out period’ to client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No reason provided from affiliate rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot pay/No budget/Business Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealistic expectations, never able to change, not enough time to prioritize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving marketing in house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client refused to give explanation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received better pricing from competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New ‘decision maker’ unwilling to continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsiveness/Timeliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client issue unresolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Performance/Lack of, or irrelevant leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work quality issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over/Under Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social: posts never change, eventually lose value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client billed incorrect amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client billed twice in one period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client unhappy with billing procedure (pause policy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entire spend moved to another G/O product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product down sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product up sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <controllingField>Cancellation_Category__c</controllingField>
            <picklistValues>
                <fullName>Sales Expectation Mismatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G/O Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client/Business Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reallocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Of_ILI__c</fullName>
        <label>Count Of ILI&apos;S</label>
        <summaryFilterItems>
            <field>Invoice_LineItem__c.IsSystemGenerated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_LineItem__c.ProjectRef__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Stamp__c</fullName>
        <label>Created Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>D2GL_Start_Time_Stamp__c</fullName>
        <description>•	Days to Go Live Start Time = 
o	If AwaitingOnboardStamp != null, AwaitingOnboardStamp
o	Elseif ClosedWonStamp != null, ClosedWonStamp
o	Else OLI.CreatedStamp</description>
        <formula>CreatedDate</formula>
        <label>D2GL Start Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DigAM_Email__c</fullName>
        <formula>Digital_Account_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DigAM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DigAM_Full__c</fullName>
        <formula>Digital_Account_Manager__r.FirstName &amp; &quot; &quot; &amp;  Digital_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DigAM Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earliest_Timestamp__c</fullName>
        <description>Should not fall through to the last NULL, so if it does, investigate</description>
        <formula>IF(Not(ISNULL(In_Awaiting_Onboard_Stamp__c)) &amp;&amp;
   (ISNULL(In_Fulfillment_Stamp__c ) || In_Awaiting_Onboard_Stamp__c &lt; In_Fulfillment_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Approval_Stamp__c ) || In_Awaiting_Onboard_Stamp__c &lt; In_Waiting_Approval_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Resource_Stamp__c ) || In_Awaiting_Onboard_Stamp__c &lt; In_Waiting_Resource_Stamp__c) &amp;&amp;
   (ISNULL(In_Pending_Stamp__c) || In_Awaiting_Onboard_Stamp__c &lt; In_Pending_Stamp__c),
       In_Awaiting_Onboard_Stamp__c,
IF(Not(ISNULL(In_Fulfillment_Stamp__c)) &amp;&amp;
   (ISNULL(In_Awaiting_Onboard_Stamp__c ) || In_Fulfillment_Stamp__c &lt; In_Awaiting_Onboard_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Approval_Stamp__c ) || In_Fulfillment_Stamp__c &lt; In_Waiting_Approval_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Resource_Stamp__c ) || In_Fulfillment_Stamp__c &lt; In_Waiting_Resource_Stamp__c) &amp;&amp;
   (ISNULL(In_Pending_Stamp__c ) || In_Fulfillment_Stamp__c &lt; In_Pending_Stamp__c),
       In_Fulfillment_Stamp__c,
IF(Not(ISNULL(In_Waiting_Approval_Stamp__c)) &amp;&amp;
   (ISNULL(In_Awaiting_Onboard_Stamp__c ) || In_Waiting_Approval_Stamp__c &lt; In_Awaiting_Onboard_Stamp__c) &amp;&amp;
   (ISNULL(In_Fulfillment_Stamp__c ) || In_Waiting_Approval_Stamp__c &lt; In_Fulfillment_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Resource_Stamp__c ) || In_Waiting_Approval_Stamp__c &lt; In_Waiting_Resource_Stamp__c) &amp;&amp;
   (ISNULL(In_Pending_Stamp__c ) || In_Waiting_Approval_Stamp__c &lt; In_Pending_Stamp__c),
       In_Waiting_Approval_Stamp__c ,
IF(Not(ISNULL(In_Waiting_Resource_Stamp__c)) &amp;&amp;
   (ISNULL(In_Awaiting_Onboard_Stamp__c ) || In_Waiting_Resource_Stamp__c &lt; In_Awaiting_Onboard_Stamp__c) &amp;&amp;
   (ISNULL(In_Fulfillment_Stamp__c ) || In_Waiting_Resource_Stamp__c &lt; In_Fulfillment_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Approval_Stamp__c ) || In_Waiting_Resource_Stamp__c &lt; In_Waiting_Approval_Stamp__c) &amp;&amp;
   (ISNULL(In_Pending_Stamp__c ) || In_Waiting_Resource_Stamp__c &lt; In_Pending_Stamp__c),
       In_Waiting_Resource_Stamp__c ,
IF(NOT(ISNULL(In_Pending_Stamp__c)) &amp;&amp;
   (ISNULL(In_Awaiting_Onboard_Stamp__c ) || In_Pending_Stamp__c&lt; In_Awaiting_Onboard_Stamp__c) &amp;&amp;
   (ISNULL(In_Fulfillment_Stamp__c ) || In_Pending_Stamp__c&lt; In_Fulfillment_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Approval_Stamp__c ) || In_Pending_Stamp__c&lt; In_Waiting_Approval_Stamp__c) &amp;&amp;
   (ISNULL(In_Waiting_Resource_Stamp__c ) || In_Pending_Stamp__c&lt; In_Waiting_Resource_Stamp__c),
       In_Pending_Stamp__c,NULL
)))))</formula>
        <label>Earliest Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GO_Assisting_Rep_Email__c</fullName>
        <formula>Opportunity__r.GL_Assisting_Rep__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Assisting Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Asst_Rep_2_Email__c</fullName>
        <formula>Opportunity__r.GL_Assist_Rep_2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GO Asst Rep 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasMediaSpend__c</fullName>
        <formula>Related_Product__r.HasMediaSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Media Spend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_ILI__c</fullName>
        <formula>Count_Of_ILI__c  &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has ILI&apos;S</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Awaiting_Onboard_Out_Stamp__c</fullName>
        <label>In Awaiting Onboard Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Awaiting_Onboard_Stamp__c</fullName>
        <label>In Awaiting Onboard Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Closed_Won_Out_Stamp__c</fullName>
        <description>Datetime Stamp when the OLI goes from “Closed Won” status to any other status
Populated by Workflow: &quot;Update Closed Won Out Stamp&quot;</description>
        <label>In Closed Won Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Closed_Won_Stamp__c</fullName>
        <description>Datetime Stamp when the OLI goes into “Closed Won” status
Populated by Workflow: &quot;Update Closed Won Stamp&quot;</description>
        <label>In Closed Won Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_Out_Stamp__c</fullName>
        <label>In Fulfillment Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_Stamp__c</fullName>
        <label>In Fulfillment Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Pending_Out_Stamp__c</fullName>
        <label>In Pending Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Pending_Stamp__c</fullName>
        <label>In Pending Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Waiting_Approval_Out_Stamp__c</fullName>
        <label>In Waiting Approval Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Waiting_Approval_Stamp__c</fullName>
        <label>In Waiting Approval Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Waiting_Resource_Out_Stamp__c</fullName>
        <label>In Waiting Resource Out Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Waiting_Resource_Stamp__c</fullName>
        <label>In Waiting Resource Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_CancelDate__c</fullName>
        <label>Invoice Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_PriceVariable__c</fullName>
        <description>Stores pricing information while creating new OLI</description>
        <inlineHelpText>This field contains different pricing variables such as CPM for Email, cost per location for Maps and cost per hours for Web Creative Fees.</inlineHelpText>
        <label>Product Price Variable</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_ServiceEndDate__c</fullName>
        <label>Product End of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_ServiceStartDate__c</fullName>
        <label>Product Start of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Units__c</fullName>
        <label>Number of Units</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JumpTo_Opp__c</fullName>
        <formula>HYPERLINK(&quot;https://na10.salesforce.com/&quot; &amp;  Opportunity__r.Id , &quot;JumpToView Opp&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JumpTo Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_From_Won_Date__c</fullName>
        <label>Last Status Change From Won Date</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <label>Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Stamp__c</fullName>
        <label>Live Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_ILIScheduledDate__c</fullName>
        <label>Max ILI Scheduled Date</label>
        <summarizedField>Invoice_LineItem__c.Invoice_ScheduleDate__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_LineItem__c.Invoice_LineItemType__c</field>
            <operation>equals</operation>
            <value>Standard</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_LineItem__c.ProjectRef__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Media_Partner_Id_On_Opp__c</fullName>
        <formula>Opportunity__r.Media_Partner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Partner Id On Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Partner_Name__c</fullName>
        <formula>Media_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Media Partner)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mgmt_Fee_Percent__c</fullName>
        <label>Mgmt Fee %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notify_Email_1__c</fullName>
        <label>Notify Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notify_Email_2__c</fullName>
        <label>Notify Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notify_Email_3__c</fullName>
        <label>Notify Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OppProd__c</fullName>
        <description>Unique Identifier for the Record</description>
        <externalId>true</externalId>
        <label>OppProd</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Email__c</fullName>
        <formula>Opportunity__r.Sales_Rep_II__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opp Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Paused_Or_Canceled__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PopulateTimestampNotes__c</fullName>
        <description>Notes for the fixing of the Awaiting Approval status</description>
        <label>PopulateTimestampNotes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <displayFormat>GLP-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Project Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_ContractMonths__c</fullName>
        <label>Qty Contract Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegenerateILIs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regenerate ILIs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_Type__c</fullName>
        <label>Sell Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Delayed_Notice__c</fullName>
        <label>Send Delayed Notice</label>
        <picklist>
            <picklistValues>
                <fullName>Notice 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sold_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Bus_Days_3__c</fullName>
        <formula>IF( 
MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,4),7)=0,Waiting_Since_Date__c +6, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,5),7)=0,Waiting_Since_Date__c +6, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,6),7)=0,Waiting_Since_Date__c +6, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,7),7)=0,Waiting_Since_Date__c +6, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,8),7)=0,Waiting_Since_Date__c +5, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,9),7)=0,Waiting_Since_Date__c +4, 
Waiting_Since_Date__c +4 
) ) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Bus Days 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Bus_Days_7__c</fullName>
        <formula>IF( 
MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,4),7)=0,Waiting_Since_Date__c +10, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,5),7)=0,Waiting_Since_Date__c +10, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,6),7)=0,Waiting_Since_Date__c +10, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,7),7)=0,Waiting_Since_Date__c +10, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,8),7)=0,Waiting_Since_Date__c +9, 
IF(MOD(DATEVALUE(Waiting_Since_Date__c ) - DATE(2000,1,9),7)=0,Waiting_Since_Date__c +8, 
Waiting_Since_Date__c +8 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Bus Days 7</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_For_Display__c</fullName>
        <description>IF(AND(Project_Status__c = &quot;Fulfilled Ineligible-Renewal&quot;,Product_Name__c = &quot;Email Blast&quot;),&quot;Product Launched, Fulfillment Complete!&quot;,
IF(Project_Status__c = &quot;Fulfilled Complete&quot;,&quot;Fulfilled-Complete: Live! GL Onboard Fulfillment Complete&quot;,
IF(Project_Status__c = &quot;Fulfilled Renewed&quot;,&quot;Fulfilled-Renewed: Contract Complete and Renewal!&quot;,
IF(Project_Status__c = &quot;Fulfilled Non-Renewal&quot;,&quot;Fulfilled Non-Renewal: Contract Complete, No Renewal&quot;,
 Project_Status__c 
))))</description>
        <formula>IF(AND(Project_Status__c = &quot;Pending&quot;,Product_Name__c = &quot;Email Blast&quot;),&quot;Pending: OnBoard Call Complete, Future Launch Date Scheduled&quot;,

IF(Project_Status__c = &quot;Fulfilled-Complete&quot;,&quot;Fulfilled-Complete: Live! GL Onboard Fulfillment Complete&quot;,
IF(Project_Status__c = &quot;Fulfilled Renewed&quot;,&quot;Fulfilled-Renewed: Contract Complete and Renewed!&quot;,
IF(Project_Status__c = &quot;Fulfilled Non-Renewal&quot;,&quot;Fulfilled Non-Renewal: Contract Complete, No Renewal&quot;,
IF(Project_Status__c = &quot;Canceled&quot;,&quot;Canceled: Contract Not Completed&quot;,
Project_Status__c 
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status For Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyCharge__c</fullName>
        <description>OLI total Monthly Charge Amount</description>
        <label>Total Monthly Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waiting_Since_Date__c</fullName>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Waiting_Status_Descr_Last_Set__c</fullName>
        <label>Waiting Status Descr - Last Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_Status_Email_Body__c</fullName>
        <label>Waiting Status Email Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Waiting_Status_Last_Set_Date__c</fullName>
        <label>Waiting Status - Last Set Date</label>
        <type>DateTime</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>AllDigifullswoMediaPartner</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Media_Partner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Opp_Record_Type__c</columns>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_For_Display__c</columns>
        <columns>Notify_Email_1__c</columns>
        <columns>Affl_Sales_Rep__c</columns>
        <columns>OppProd__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Waiting_Status_Descr_Last_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Media_Partner__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Opp_Record_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity.Digital_Fulfillment</value>
        </filters>
        <label>All DigiFulls W/O Media Partner</label>
    </listViews>
    <listViews>
        <fullName>All_ModToday</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Media_Partner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Opp_Record_Type__c</columns>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_For_Display__c</columns>
        <columns>Notify_Email_1__c</columns>
        <columns>Affl_Sales_Rep__c</columns>
        <columns>OppProd__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Waiting_Status_Descr_Last_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Opp_Record_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity.Digital_Fulfillment</value>
        </filters>
        <label>All - ModToday</label>
    </listViews>
    <listViews>
        <fullName>All_My_Projects</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Notify_Email_1__c</columns>
        <columns>Affl_Sales_Rep_OnOppId__c</columns>
        <columns>Affl_Sales_Rep__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OppProd__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Id__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Waiting_Status_Descr_Last_Set__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>All-My Projects</label>
    </listViews>
    <listViews>
        <fullName>Project_By_Id</fullName>
        <columns>Waiting_Since_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Notify_Email_1__c</columns>
        <columns>Affl_Sales_Rep_OnOppId__c</columns>
        <columns>Affl_Sales_Rep__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OppProd__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product_Id__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Waiting_Status_Descr_Last_Set__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OppProd__c</field>
            <operation>contains</operation>
            <value>00kF000000QajGpIAJ</value>
        </filters>
        <label>Project By Id</label>
    </listViews>
    <nameField>
        <label>Project Updates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>